вынес коннект к бд в отдельный файл, добавил gin для роутинга, что помогло вынести всю логику свяазанную с сущностями в отдельный файл, добавил swagger, добавил DTO для сущностей

--- a/app/.env
+++ b/app/.env
@@ -4,6 +4,6 @@ MYSQL_DATABASE=go_base
 MYSQL_USER=naaz
 MYSQL_PASSWORD=Berezhnov2001
 
-DATABASE_URL=naaz:Berezhnov2001@tcp(127.0.0.1:3306)/go_base?charset=utf8mb4&parseTime=True&loc=Local
+DATABASE_URL=root:root@tcp(127.0.0.1:4306)/go_base?charset=utf8mb4&parseTime=True&loc=Local
 
 TIMEZONE=Europe/Moscow
