Тесты, переменные окружения и по мелочи

--- a/.env.test
+++ b/.env.test
@@ -8,4 +8,4 @@ DATABASE_URL=root:root@tcp(127.0.0.1:4306)/go_base?charset=utf8mb4&parseTime=Tru
 
 TIMEZONE=Europe/Moscow
 
-APP_ENV_MODE=debug
+APP_ENV_MODE=test
